--- a/social-frontend/src/_variables.scss
+++ b/social-frontend/src/_variables.scss
@@ -1,3 +1,3 @@
-$primary-color: rgb(14, 14, 14);
-$secondary-color: grey;
-$tertiary-color: white;
+$primary-color: #191919;
+$secondary-color: #750E21;
+$tertiary-color: #E3651D;
