Update navbar styles

--- a/social-frontend/src/Components/navbar/navbar_styles.module.scss
+++ b/social-frontend/src/Components/navbar/navbar_styles.module.scss
@@ -15,6 +15,10 @@
     .userTab {
         max-width: fit-content;
     }
+
+    svg {
+        color: $tertiary-color;
+    }
 }
 
 .noDropdownArrow a::after {
